--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,6 +1,7 @@
 {% assign asideData = site.data.i18n[language]['aside'] %}
 
-<img alt="{{ asideData['strings'].imageAltText }}" class="aperture halfWidth" src="/media/portrait_square.png" />
+<img alt="{{ asideData['strings'].imageAltText }}" class="aperture" src="/media/portrait_square.png" />
+
 <h2>{{ asideData.headline }}</h2>
 <p>
 	{{ asideData.description }}
