--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,8 @@
         {{ content }}
       </main>
 
-      <div id="spacer"></div>
+      <div id="spacer1">&nbsp;</div>
+      <div id="spacer2">&nbsp;</div>
 
       <aside>
         <div id="asideContainer">
