--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -15,8 +15,8 @@
     color definitions
 */
 
-$colBackground: #aaa;
-$colForeground: ivory;
+$colBackground: #fff;
+$colForeground: #fff;
 $colHeaderBackground: #777;
 $colLink: #9ab;
 $colLinkLight: #fff;
