--- a/css/_tags.scss
+++ b/css/_tags.scss
@@ -4,12 +4,14 @@
 	//border: none;	
 }
 
-#spacer {
-	display: block;
+#spacer1, #spacer2 {	
+	display: table-cell;
 	min-width: $space;
 	max-width: $space;
-	width: $space;
+	width: $space;		
 }
+
+#spacer1 { border-right: 1px solid black; }
 
 a {
 	//border-bottom: 1px dotted $colLink;
@@ -40,7 +42,7 @@ a.tag {
 	border: none;
 	color: $colTextLight;
 	display: inline-block;	
-	font-size: 0.75em;
+	//font-size: 0.75em;
 	margin: 0em 0.25em 0.25em 0em;
 	padding: 0.25em 0.75em;
 	@include vendor(transition, background-color 1s);	
@@ -65,6 +67,10 @@ h1 {
 	font-weight: bold;
 	margin-bottom: $marginHeader;
 	margin-top: 2*$marginHeader;
+
+	a {
+		color: $colTextDark;
+	}
 }
 
 h2 {
@@ -121,8 +127,8 @@ ul {
 #dropDown {		
 	position: relative;	
 
-	#dropDownSwitch + ul { display: none; }
-	#dropDownSwitch:checked + ul { display: block; }
+	#dropDownSwitch ~ ul { display: none; }
+	#dropDownSwitch:checked ~ ul { display: block; }	
 
 	a {
 		border: none;
@@ -138,26 +144,26 @@ ul {
 		cursor: pointer;
 		display: block;
 		padding: 0em 0.25em;
-		width: 100%;
-
-		span {
-			float: right;
-		}
+		width: 100%;		
 
 		&:after {
-			content: "";
-			clear: both;
-			display: block;
+			content: "\f431";
+			float: right;
+			font-family: "Genericons";
+			display: inline;
 		}		
 	}
+
+	#dropDownSwitch:checked ~ label:after { content: "\f432"; }
 
 	li {
 		cursor: pointer;
 		display: block;
 		padding: 0em 0.25em;
+		@include vendor(transition, background-color 1s);
 
 		&:hover {
-			background-color: $colBackground;
+			background-color: $colLinkLightHover;
 		}
 	}		
 
