new portrait image

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,6 +1,6 @@
 {% assign asideData = site.data.i18n[language]['aside'] %}
 
-<img alt="{{ asideData['strings'].imageAltText }}" class="aperture" src="/media/portrait_square.png" />
+<img alt="{{ asideData['strings'].imageAltText }}" class="aperture" src="/media/portrait_square.jpg" />
 
 <h2>{{ asideData.headline }}</h2>
 <p>
